@@ -38,7 +38,7 @@ var CloudCmd, Util, DOM;
         F6          : 117,
         F7          : 118,
         F8          : 119,
-        F10         : 121,
+        F9          : 120,
         
         TRA         : 192 /* Typewritten Reverse Apostrophe (`) */
     };
@@ -161,11 +161,9 @@ var CloudCmd, Util, DOM;
                         DOM.promptDeleteCurrent(lCurrent);
                         break;
                     
-                    case Key.F10:
-                        if(lShift){
-                            Util.exec(CloudCmd.Menu);
-                            DOM.preventDefault(pEvent);
-                        }
+                    case Key.F9:
+                        Util.exec(CloudCmd.Menu);
+                        DOM.preventDefault(pEvent);
                         break;
                     
                     case Key.TRA:
