@@ -2,10 +2,12 @@
  * https://github.com/medialize/jQuery-contextMenu
  */
 var CloudCmd, Util, DOM, CloudFunc, $;
+
 (function(CloudCmd, Util, DOM, CloudFunc){
     'use strict';
     
     var Key                         = CloudCmd.Key,
+        Events                      = DOM.Events,
         MenuSeted                   = false,
         Menu                        = {},
         Position,
@@ -212,7 +214,6 @@ var CloudCmd, Util, DOM, CloudFunc, $;
         
         DOM.anyLoadInParallel(lFiles, function(){
             Util.timeEnd('menu load');
-            $.contextMenu.handle.keyStop = $.noop;
             Util.exec(pCallBack);
         });
     }
@@ -224,7 +225,7 @@ var CloudCmd, Util, DOM, CloudFunc, $;
      * layer wich hides all elements of
      * Cloud Commander so it could not handle
      * onclick events. To get every thing work
-     * how expected we remove invisible layer
+     * how expected we hide invisible layer
      * so for observer it is nothing special
      * is not going on. All magic happening in
      * DOM tree.
@@ -232,7 +233,7 @@ var CloudCmd, Util, DOM, CloudFunc, $;
     function clickProcessing(){
         var lLayer = DOM.getById('context-menu-layer');
         if(lLayer){
-            document.body.removeChild(lLayer);
+            DOM.hide(lLayer);
             
             var lElement    = document.elementFromPoint(Position.x, Position.y),
                 lTag        = lElement.tagName;
@@ -247,6 +248,7 @@ var CloudCmd, Util, DOM, CloudFunc, $;
                     DOM.setCurrentFile(lElement);
             }
             
+            DOM.show(lLayer);
             Key.setBind();
         }
     }
@@ -290,20 +292,27 @@ var CloudCmd, Util, DOM, CloudFunc, $;
             DOM.jqueryLoad
         ]);
         
-        DOM.Events.addKey( lListener );
+        Events.addKey( lListener );
+        
+        DOM.setButtonKey('f9', function(){
+            var lCurrent    = DOM.getCurrentFile(),
+                lEvent      = Events.create('contextmenu'); 
+                
+                Events.dispatch(lEvent, lCurrent);
+        });
                 
         function lListener(pEvent){
-            var lF10        = Key.F10,
+            var lCurrent,
+                lF9         = Key.F9,
                 lESC        = Key.ESC,
                 lKey        = pEvent.keyCode,
-                lShift      = pEvent.shiftKey,
                 lIsBind     = Key.isBind();
             
-            if( lIsBind ){
-                if(lKey === lF10 && lShift){
-                    $( DOM.getCurrentFile() ).contextMenu();
-                    DOM.preventDefault(pEvent);
-                }
+            if (lIsBind && lKey === lF9) {
+                lCurrent = DOM.getCurrentFile();
+                $(lCurrent).contextmenu();
+                
+                DOM.preventDefault(pEvent);
             }
             else if (lKey === lESC)
                 Key.setBind();
